--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -3,18 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:theme="@style/lightStyle"
+    app:cardCornerRadius="5dp"
     app:layout_collapseParallaxMultiplier="1.0">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#b579d2">
 
         <ImageView
             android:id="@+id/mapImage"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="12dp"
             android:contentDescription="@string/image"
             android:src="@drawable/gps" />
 
@@ -23,20 +24,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_toRightOf="@+id/mapImage"
             android:text="Title"
-            android:textSize="25sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/mapContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="37dp"
             android:layout_toRightOf="@+id/mapImage"
             android:text="content"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
