--- a/app/src/main/res/layout/main_screen_content.xml
+++ b/app/src/main/res/layout/main_screen_content.xml
@@ -14,14 +14,15 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#b579d2" />
+            android:background="#b579d2"
+            app:titleTextColor="#FFFFFF" />
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <com.astuetz.PagerSlidingTabStrip
             android:id="@+id/tabStrip"
