--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,22 +2,16 @@
 <resources>
 
     <style name="d" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:textColor">#ffff8800</item>
         <item name="android:textStyle">bold</item>
         <item name="android:statusBarColor">#AA68CC</item>
-        <item name="android:windowBackground">@drawable/dbb</item>
-        <item name="android:popupMenuStyle">@style/popup_style</item>
+        <item name="android:colorBackground">#b579d2</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+
     </style>
 
-    <style name="popup_style" parent="Widget.AppCompat.PopupMenu">
-        <item name="android:popupBackground">#b579d2</item>
-    </style>
-
-    <style name="l" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:textColor">#ffff8800</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:statusBarColor">#AA68CC</item>
-        <item name="android:windowBackground">@drawable/lbb</item>
+    <style name="search_style" parent="AlertDialog.AppCompat.Light">
+        <item name="android:colorBackground">#b579d2</item>
+        <item name="android:textColor">@color/colorAccent</item>
     </style>
 
     <style name="lightStyle" parent="Theme.AppCompat">
@@ -57,4 +51,5 @@
     <style name="prefrence">
         <item name="android:background">#ffff8800</item>
     </style>
+
 </resources>
