--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="d" parent="Theme.AppCompat">
+    <style name="d" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:textColor">#ffff8800</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:statusBarColor">#212121</item>
-        <item name="android:windowBackground">@drawable/dbb</item>
-    </style>
-
-    <style name="l" parent="Theme.AppCompat.Light">
-        <item name="android:textColor">#ffff8800</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:statusBarColor">#2F000000</item>
-        <item name="android:windowBackground">@drawable/lbb</item>
+        <item name="android:statusBarColor">#AA68CC</item>
     </style>
 
     <style name="lightStyle" parent="Theme.AppCompat">
         <item name="android:textColor">#ffff8800</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:colorBackground">#ffffff</item>
+    </style>
+
+    <style name="navigation">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:colorBackground">#ffffff</item>
     </style>
 
     <style name="CMOptionsMenu" parent="Widget.AppCompat.PopupMenu.Overflow">
@@ -45,4 +43,5 @@
     <style name="prefrence">
         <item name="android:background">#ffff8800</item>
     </style>
+
 </resources>
